--- a/layouts/no-sidebar.css
+++ b/layouts/no-sidebar.css
@@ -74,7 +74,7 @@ Layout: No sidebar
     max-width: 880px;
     max-width: 88rem;
     padding: 0rem 0rem 2rem 0rem;
-    margin: 0 auto 2em;
+    margin: 0 auto 0rem;
     background: #fff;
     background: hsl(0, 0%, 100%);
 }
